// Vitest Snapshot v1

exports[`PageFramework > rendrer slik den skal i full width 1`] = `
<DocumentFragment>
  <main
    class="_main_4532c9"
  >
    <div
      class="_headerGroup_4532c9"
    >
      <h1
        class="_headerGroupTitle_4532c9 navds-heading navds-heading--large"
      >
        application.title
      </h1>
    </div>
  </main>
</DocumentFragment>
`;

exports[`PageFramework > rendrer slik den skal, med main tag og Heading på riktig nivå 1`] = `
<DocumentFragment>
  <main
    class="_main_4532c9 _main__isFramed_4532c9"
  >
    <div
      class="_headerGroup_4532c9"
    >
      <h1
        class="_headerGroupTitle_4532c9 _headerGroupTitle__isFramed_4532c9 navds-heading navds-heading--large"
      >
        application.title
      </h1>
    </div>
  </main>
</DocumentFragment>
`;
